core/b2b/core-services/mongoman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoman
  labels:
    app: mongoman
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: mongoman
  type: ClusterIP
